/*
 * Router gRPC service definition.
 *
 * @author Michel Megens
 * @email  michel@michelmegens.net
 */

syntax = "proto3";

package sensateiot;
option csharp_namespace = "SensateIoT.Platform.Network.Contracts.Services";

import "DTO/Measurement.proto";
import "DTO/Message.proto";

import "RPC/RoutingResponse.proto";

service IngressRouter
{
	rpc EnqueueMeasurement(Measurement) returns (RoutingResponse);
	rpc EnqueueMessage(TextMessage) returns (RoutingResponse);

	rpc EnqueueBulkMeasurements(MeasurementData) returns (RoutingResponse);
	rpc EnqueueBulkMessages(TextMessageData) returns (RoutingResponse);
}
